--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div  id = "overview" class="container col-xxl-8 px-4 mx-0">
         <div class="row flex-lg-row-reverse align-items-center py-5 ">
           <div class="col-10 col-sm-8 col-lg-6">
-            <img src="profil.png" class="d-block mx-lg-auto img-fluid shadow-sm" alt="profile pic" width="300" loading="lazy">
+            <img src="profil.png" class="d-block mx-lg-auto img-fluid shadow-sm my-5" alt="profile pic" width="300" loading="lazy">
           </div>
           <div class="col-lg-6 ">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
@@ -42,7 +42,7 @@
     </div>
 
     <!--Education--> 
-    <div class="container px-4 py-5" id="education">
+    <div class="container px-2 py-5" id="education">
         <h2 class="pb-2 border-bottom">EDUCATION</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
@@ -74,7 +74,7 @@
       </div>
 
     <!--SKILLS-->
-    <div class="container px-4 py-5" id="skills">
+    <div class="container px-2 py-5" id="skills">
         <h2 class="pb-2 border-bottom">SKILLS</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="feature col">
