--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <nav id="navbar-example2" class="navbar bg-body-tertiary  mb-3 justify-content-center">
+    <nav id="navbar-example2" class="navbar
+     justify-content-center">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
     <ul class="nav nav-pills">
         <li class="nav-item">
@@ -29,7 +30,7 @@
     </nav>
 
     <!--Overview-->
-    <div  id = "overview" class="container col-xxl-8 px-4 mx-0">
+    <div  id = "overview" class="container-fluid">
         <div class="row flex-lg-row-reverse align-items-center py-5 ">
           <div class="col-10 col-sm-8 col-lg-6">
             <img src="profil.png" class="d-block mx-lg-auto img-fluid shadow-sm my-5" alt="profile pic" width="300" loading="lazy">
@@ -39,10 +40,10 @@
             <p class="lead">Your not-so-average chemical engineer who loves to design websites and create artificial intelligence from literally any data he gets his hands on.</p>
           </div>
         </div>
-    </div>
+    </div>  
 
     <!--Education--> 
-    <div class="container px-2 py-5" id="education">
+    <div class="container-fluid px-4 py-5" id="education">
         <h2 class="pb-2 border-bottom">EDUCATION</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="col d-flex align-items-start">
@@ -74,7 +75,7 @@
       </div>
 
     <!--SKILLS-->
-    <div class="container px-2 py-5" id="skills">
+    <div class="container-fluid px-4 py-5" id="skills">
         <h2 class="pb-2 border-bottom">SKILLS</h2>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="feature col">
