--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
     <!--WorkExperience-->
-    <div class="container-fluid px-5 py-5" id="workex">
+<!--     <div class="container-fluid px-5 py-5" id="workex">
         <h2 class="pb-2 border-bottom">WORK EXPERIENCE</h2>    
         <div id="myCarousel" class="carousel justify-content-center mb-6 mt-2" data-bs-ride="carousel">
         <div class="carousel-indicators">
@@ -186,7 +186,7 @@
             <span class="visually-hidden">Next</span>
         </button>
         </div>
-    </div>
+    </div> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
