--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="col-lg-6 ">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
-            <p class="lead">Your not-so-average chemical engineer who loves to design websites and create artificial intelligence from literally any data he gets his hands on.</p>
+            <p class="lead"><b>Your not-so-average chemical engineer who loves to design websites and create artificial intelligence from literally any data he gets his hands on.</b></p>
           </div>
         </div>
     </div>  
@@ -140,7 +140,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item">
-            <img class="bd-placeholder-img" width="100%" height="300px" src="./fast-charging.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></img>
+            <img class="bd-placeholder-img" width="500px" height="300px" src="./fast-charging.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></img>
             <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg> -->
             <div class="container">
                 <div class="carousel-caption text-start">
