--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a class="nav-link text-dark" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" href="#scrollspyHeading2">Experience</a>
+            <a class="nav-link text-dark" href="#workex">Experience</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-dark" href="#scrollspyHeading2">Interests</a>
