--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div  id = "overview" class="container-fluid">
         <div class="row flex-lg-row-reverse align-items-center py-5 px-5">
           <div class="col-10 col-sm-8 col-lg-6">
-            <img id="profile-pic" src="profil-pic2.png" class="d-block mx-lg-auto img-fluid shadow-sm my-5" alt="profile pic" width="300" loading="lazy">
+            <img id="profile-pic" src="profil-pic2.jpg" class="d-block mx-lg-auto img-fluid shadow-sm my-5" alt="profile pic" width="300" loading="lazy">
           </div>
           <div class="col-lg-6 ">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
