--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item">
-            <img class="bd-placeholder-img" width="500px" height="300px" src="./fast-charging.jpg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></img>
-            <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg> -->
+            <img class="bd-placeholder-img" width="100%" height="300px" src="./fast-charging2.jfif" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></img>
             <div class="container">
                 <div class="carousel-caption text-start">
                 <h1>Fast Charging.</h1>
