--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
           </div>
         </div>
-      </div>
+    </div>
 
     <!--SKILLS-->
     <div class="container-fluid px-5 py-5" id="skills">
@@ -210,7 +210,7 @@
 
 
     <!--Interests-->
-    <div class="container px-4 py-5" id="interests">
+    <div class="container-fluid px-5 py-5" id="interests">
         <h2 class="pb-2 border-bottom">INTERESTS</h2>
     
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
