--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
     <ul class="nav nav-pills">
         <li class="nav-item">
-        <a class="nav-link text-dark" href="#overview">Overview</a>
+        <a class="nav-link text-dark" href="#overview"><b>Overview</b></a>
         </li>
         <li class="nav-item">
-        <a class="nav-link text-dark" href="#education">Education</a>
+        <a class="nav-link text-dark" href="#education"><b>Education</b></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" href="#skills">Skills</a>
+            <a class="nav-link text-dark" href="#skills"><b>Skills</b></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" href="#workex">Experience</a>
+            <a class="nav-link text-dark" href="#workex"><b>Experience</b></a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" href="#interests">Interests</a>
+            <a class="nav-link text-dark" href="#interests"><b>Interests</b></a>
         </li>
     </ul>
     </nav>
@@ -45,8 +45,40 @@
     <!--Education--> 
     <div class="container-fluid px-5 py-5" id="education">
         <h2 class="pb-2 border-bottom">EDUCATION</h2>
-        <div class="row g-4 py-5 row-cols-sm-2 row-cols-lg-3 justify-content-center">
-          <div class="col d-flex align-items-start">
+        <div class="row g-4 pt-5 row-cols-sm-2 row-cols-lg-3 justify-content-center">
+            <div class="card mb-3 mx-lg-auto" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-mx-4">
+                    <img src="./ju.jpg" height="" class="img-fluid rounded-4" alt="jadavpur-univeristy">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">B.Tech</h5>
+                      <p class="card-text">Chemical Engineering</p>
+                      <p class="card-text">Jadavpur University, Kolkata</p>
+                      <p class="card-text"><small class="text-body-secondary">2016-2020</small></p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
+            <div class="card mb-3 mx-lg-auto" style="max-width: 540px;">
+            <div class="row g-0">
+                <div class="col-mx-4">
+                <img src="./kgp2.jpg" class="img-fluid rounded-4" alt="iit-kgp">
+                </div>
+                <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">M.Tech</h5>
+                    <p class="card-text">Chemical Engineering</p>
+                    <p class="card-text">Indian Institute of Technology, Kharagpur</p>
+                    <p class="card-text"><small class="text-body-secondary">2021-2023</small></p>
+                </div>
+                </div>
+            </div>
+            </div>
+          
+            <!-- <div class="col d-flex align-items-start">
             <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-backpack2" viewBox="0 0 16 16">
                     <path d="M4.04 7.43a4 4 0 0 1 7.92 0 .5.5 0 1 1-.99.14 3 3 0 0 0-5.94 0 .5.5 0 1 1-.99-.14"/>
@@ -72,9 +104,11 @@
               <p>Chemical Engineering</p>
               <p>Indian Institute of Technology, Kharagpur, West Bengal</p>
             </div>
-          </div>
+          </div> -->
         </div>
     </div>
+
+    
 
     <!--SKILLS-->
     <div class="container-fluid px-5 py-5" id="skills">
@@ -244,7 +278,7 @@
       </div>
 
     <!--Footer-->
-    <div class="container-fluid">
+    <div class="container-fluid px-5 py-5" id="footer">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
             <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
