--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
+    <div class="top">
     <nav id="navbar-example2" class="navbar
      justify-content-center">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
@@ -41,6 +42,7 @@
           </div>
         </div>
     </div>  
+    </div>
 
     <!--Education--> 
     <div class="container-fluid px-5 py-5" id="education">
@@ -49,7 +51,7 @@
             <div class="card mb-3 mx-lg-auto" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-mx-4">
-                    <img src="./ju.jpg" height="" class="img-fluid rounded-4" alt="jadavpur-univeristy">
+                    <a href="https://jadavpuruniversity.in/"><img src="./ju.jpg" class="img-fluid rounded-4" alt="jadavpur-univeristy"></a>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -65,7 +67,7 @@
             <div class="card mb-3 mx-lg-auto" style="max-width: 540px;">
             <div class="row g-0">
                 <div class="col-mx-4">
-                <img src="./kgp2.jpg" class="img-fluid rounded-4" alt="iit-kgp">
+                <a href="https://www.iitkgp.ac.in/"><img src="./kgp2.jpg" class="img-fluid rounded-4" alt="iit-kgp"></a>
                 </div>
                 <div class="col-md-8">
                 <div class="card-body">
@@ -261,7 +263,7 @@
             <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('./books.jpg');">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
                 <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Books.</h3>
-                <p>Both fiction and non-fiction but heavy inclined towards psychology and philosphy. Reading Carl Jung at my own risk 📖</p>
+                <p>Both fiction and non-fiction but heavily inclined towards psychology and philosphy. Reading Carl Jung at my own risk 📖</p>
               </div>
             </div>
           </div>
