Update and rename cover.html to index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Welcome.</h1>
     <p class="lead">Why don't we get to know each other a little better? Go on. Enter my digital home.</p>
     <p class="lead">
-      <a href="./index.html" class="btn btn-lg btn-light fw-bold border-white bg-white">Enter</a>
+      <a href="./home.html" class="btn btn-lg btn-light fw-bold border-white bg-white">Enter</a>
     </p>
   </main>
 
