--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
   <main class="px-3 mt-auto">
     <h1>Welcome.</h1>
-    <p class="lead">Why don't we get to know each other a little better? Go on. Enter my digital home.</p>
+    <p class="lead h"><b>Why don't we get to know each other a little better? Go on. Enter my digital home.</b></p>
     <p class="lead">
-      <a href="./home.html" class="btn btn-lg btn-light fw-bold border-white bg-white">Enter</a>
+      <a href="./index.html" class="btn btn-lg border-dark fw-bold">Enter</a>
     </p>
   </main>
 
