--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Welcome.</h1>
     <p class="lead h"><b>Why don't we get to know each other a little better? Go on. Enter my digital home.</b></p>
     <p class="lead">
-      <a href="./index.html" class="btn btn-lg border-dark fw-bold">Enter</a>
+      <a href="./home.html" class="btn btn-lg border-dark fw-bold">Enter</a>
     </p>
   </main>
 
