--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
     <title>Cover</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="./style2.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="d-flex h-100 text-center">
         
 <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
   <main class="px-3 mt-auto">
-    <h1>Welcome.</h1>
-    <p class="lead h"><b>Why don't we get to know each other a little better? Go on. Enter my digital home.</b></p>
-    <p class="lead">
+    <h1 class="animate__animated animate__fadeInDown">Welcome.</h1>
+    <p class="lead animate__animated animate__fadeInDown"><b>Why don't we get to know each other a little better? Go on. Enter my digital home.</b></p>
+    <p class="lead animate__animated animate__fadeInUp">
       <a href="./home.html" class="btn btn-lg border-white btn-light fw-bold">Enter</a>
     </p>
   </main>
 
   <footer class="mt-auto text-white-50">
-    <p>Welcome to the machine.</p>
+    <p class="my-0 animate__animated animate__fadeInUp">Welcome to the machine.</p>
+    <p><span class="text-body-secondary animate__animated animate__fadeInUp">© Subhankar Bhattacharjee. All rights reserved.</span>
+    </p>
   </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
