--- a/home.html
+++ b/home.html
@@ -5,11 +5,11 @@
     <title>Subhankar's portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="top">
-    <nav id="navbar-example2" class="navbar
-     justify-content-center">
+    <nav id="navbar-example2" class="navbar justify-content-center animate__animated animate__fadeInDown">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
     <ul class="nav nav-pills">
         <li class="nav-item">
@@ -44,10 +44,10 @@
     <!--Overview-->
     <div  id = "overview" class="container-fluid">
         <div class="row flex-lg-row-reverse align-items-center py-5 px-5">
-          <div class="col-10 col-sm-8 col-lg-6">
+          <div class="col-10 col-sm-8 col-lg-6 animate__animated animate__fadeInRight">
             <img id="profile-pic" src="./profile-pic2.jpg" class="d-block mx-lg-auto img-fluid shadow-sm my-5" alt="profile pic" width="300" loading="lazy">
           </div>
-          <div class="col-lg-6 ">
+          <div class="col-lg-6 animate__animated animate__fadeInLeft">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
             <h5>Your not-so-average chemical engineer who loves to design websites and create artificial intelligence from literally any data he gets his hands on. </h5>
           </div>
