--- a/home.html
+++ b/home.html
@@ -266,7 +266,7 @@
       <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
         <div class="col d-flex flex-column align-items-start gap-2">
           <h3 class="fw-bold text-body-emphasis">Why stop learning?</h3>
-          <p class="text-body-secondary">I believe one can always learn more at any point in their life. There is no end to knowledge and in the digital world we live in, where information is at our fingertips, it is very convenient to learn new things or pick up new skills. </p>
+          <p class="text-body-secondary">I believe one can always learn new things at any point in their life. There is no end to knowledge. The increasingly digital days also make it easier for us to pick up the skills that we want.</p>
         </div>
   
         <div class="col">
