--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
           </div>
           <div class="col-lg-6 animate__animated animate__fadeInLeft">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
-            <h5>Your not-so-average chemical engineer who loves to design websites and create artificial intelligence from literally any data he gets his hands on. </h5>
+            <h5>Your not-so-average chemical engineer who is adept with cutting-edge technology in the field of electric-Vehicle charging and he also uses his programming skills to build artifical neural networks and design websites (such as this)</h5>
           </div>
         </div>
     </div>  
@@ -147,7 +147,7 @@
           </div>
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
-                <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-file-earmark-bar-graph-fill" viewBox="0 0 16 16">
+              <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-file-earmark-bar-graph-fill" viewBox="0 0 16 16">
                 <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1m.5 10v-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5m-2.5.5a.5.5 0 0 1-.5-.5v-4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5zm-3 0a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5z"/>
               </svg>
                 </div>
