--- a/home.html
+++ b/home.html
@@ -208,7 +208,7 @@
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 3"></button>
             </div>
-            <div class="carousel-inner">
+            <div class="carousel-inner rounded-5">
               <div class="carousel-item active">
                 <img class="bd-placeholder-img" width="100%" height="300px" src="./fast-charging2.jfif" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></img>
                 <div class="container">
