--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
           </div>
           <div class="col-lg-6 animate__animated animate__fadeInLeft">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
-            <h5>Your not-so-average chemical engineer who is adept with cutting-edge technology in the field of electric-Vehicle charging and he also uses his programming skills to build artifical neural networks and design websites (such as this)</h5>
+            <h5>Your not-so-average chemical engineer who is adept with cutting-edge technology in the field of electric-Vehicle charging and who also uses his programming skills to build artifical neural networks and design websites (such as this)</h5>
           </div>
         </div>
     </div>  
