--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
     <div  id = "overview" class="container-fluid">
         <div class="row flex-lg-row-reverse align-items-center py-5 px-5">
           <div class="col-10 col-sm-8 col-lg-6 animate__animated animate__fadeInRight">
-            <img id="profile-pic" src="./profile-pic2.jpg" class="d-block mx-lg-auto img-fluid shadow-sm my-5" alt="profile pic" width="300" loading="lazy">
+            <img id="profile-pic" src="./profile-pic2.jpg" class="d-block mx-lg-auto img-fluid shadow-sm my-5 shadow-lg" alt="profile pic" width="300" loading="lazy">
           </div>
           <div class="col-lg-6 animate__animated animate__fadeInLeft">
             <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
@@ -63,9 +63,9 @@
 
     <!--Education--> 
     <div class="container-fluid px-5 py-5" id="education">
-        <h2 class="pb-2 border-bottom">EDUCATION</h2>
+        <!-- <h2 class="pb-2 border-bottom">EDUCATION</h2> -->
         <div class="row g-4 pt-5 row-cols-sm-2 row-cols-lg-3 justify-content-center">
-            <div class="card mb-3 mx-lg-auto" style="max-width: 540px;">
+            <div class="card mb-3 mx-lg-auto shadow-lg" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-mx-4">
                     <a href="https://jadavpuruniversity.in/"><img src="./ju.jpg" class="img-fluid rounded-4" alt="jadavpur-univeristy"></a>
@@ -81,7 +81,7 @@
                 </div>
             </div>
 
-            <div class="card mb-3 mx-lg-auto" style="max-width: 540px;">
+            <div class="card mb-3 mx-lg-auto shadow-lg" style="max-width: 540px;">
             <div class="row g-0">
                 <div class="col-mx-4">
                 <a href="https://www.iitkgp.ac.in/"><img src="./kgp2.jpg" class="img-fluid rounded-4" alt="iit-kgp"></a>
@@ -131,7 +131,7 @@
 
     <!--SKILLS-->
     <div class="container-fluid px-5 py-5" id="skills">
-        <h2 class="pb-2 border-bottom">SKILLS</h2>
+        <!-- <h2 class="pb-2 border-bottom">SKILLS</h2> -->
         <div class="row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center">
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
@@ -182,8 +182,8 @@
 
     <!--WorkExperience-->
     <div class="container-fluid px-5 py-5" id="workex">
-        <h2 class="pb-2 border-bottom">EXPERIENCE</h2> 
-        <div class="row d-flex py-5 row-cols-sm-2 row-cols-lg-3 justify-content-start">
+        <!-- <h2 class="pb-2 border-bottom">EXPERIENCE</h2>  -->
+        <div class="row d-flex py-5 row-cols-sm-2 row-cols-lg-3 justify-content-start shadow-lg rounded-3">
         <div id="sar-emobility" class="col d-flex align-items-start justify-content-start ">
             <div class="icon-square text-body-emphasis d-inline-flex align-items-center fs-4 flex-shrink-0 me-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-buildings-fill" viewBox="0 0 16 16">
@@ -263,7 +263,7 @@
 
     <!--Certifications-->
     <div class="container-fluid px-5 py-5" id="certificate">
-      <h2 class="pb-2 border-bottom">CERTIFICATIONS</h2>
+      <!-- <h2 class="pb-2 border-bottom">CERTIFICATIONS</h2> -->
   
       <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
         <div class="col d-flex flex-column align-items-start gap-2">
@@ -271,7 +271,7 @@
           <p class="text-body-secondary">I believe one can always learn new things at any point in their life. There is no end to knowledge. The increasingly digital days also make it easier for us to pick up the skills that we want.</p>
         </div>
   
-        <div class="col">
+        <div class="col shadow-lg px-4 py-5">
           <div class="row row-cols-1 row-cols-sm-2 g-4">
             <div class="col d-flex flex-column gap-2">
               <div class="feature-icon align-items-center justify-content-center fs-4 rounded-3">
@@ -321,7 +321,7 @@
 
     <!--Interests-->
     <div class="container-fluid px-5 py-5" id="interests">
-        <h2 class="pb-2 border-bottom">INTERESTS</h2>
+        <!-- <h2 class="pb-2 border-bottom">INTERESTS</h2> -->
     
         <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
           <div class="col">
