--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="./style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
     <div class="top">
@@ -53,8 +54,8 @@
           <div class="col-10 col-sm-8 col-lg-6 animate__animated animate__fadeInRight">
             <img id="profile-pic" src="./profile-pic2.jpg" class="d-block mx-lg-auto img-fluid shadow-sm my-5 shadow-lg" alt="profile pic" width="300" loading="lazy">
           </div>
-          <div class="col-lg-6 animate__animated animate__fadeInLeft">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
+          <div class="intro col-lg-6 animate__animated animate__fadeInLeft">
+            <h1 class="display-5 fw-bold lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
             <h5>Your not-so-average chemical engineer who is adept with cutting-edge technology in the field of electric-Vehicle charging and who also uses his programming skills to build artifical neural networks and design websites (such as this)</h5>
           </div>
         </div>
@@ -132,7 +133,7 @@
     <!--SKILLS-->
     <div class="container-fluid px-5 py-5" id="skills">
         <!-- <h2 class="pb-2 border-bottom">SKILLS</h2> -->
-        <div class="row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center">
+        <div class="skills row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center">
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
@@ -384,5 +385,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="./home.js"></script>
 </body>
 </html>
