--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@
                     <path d="M10.478 1.647a.5.5 0 1 0-.956-.294l-4 13a.5.5 0 0 0 .956.294zM4.854 4.146a.5.5 0 0 1 0 .708L1.707 8l3.147 3.146a.5.5 0 0 1-.708.708l-3.5-3.5a.5.5 0 0 1 0-.708l3.5-3.5a.5.5 0 0 1 .708 0m6.292 0a.5.5 0 0 0 0 .708L14.293 8l-3.147 3.146a.5.5 0 0 0 .708.708l3.5-3.5a.5.5 0 0 0 0-.708l-3.5-3.5a.5.5 0 0 0-.708 0"/>
                   </svg>
                 </div>
-            <h3 class="fs-2 text-body-emphasis">Programming</h3>
+            <h3 class="fs-2">Programming</h3>
             <ul>
                 <li>Python</li>
                 <li>Java</li>
@@ -155,7 +155,7 @@
                 <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0M9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1m.5 10v-6a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5m-2.5.5a.5.5 0 0 1-.5-.5v-4a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5zm-3 0a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5z"/>
               </svg>
                 </div>
-            <h3 class="fs-2 text-body-emphasis">Data Science</h3>
+            <h3 class="fs-2">Data Science</h3>
                 <ul>
                     <li>Transformers (BERT, GTP)</li>
                     <li>Scikit-learn</li>
@@ -169,7 +169,7 @@
                     <path d="M9 5a3 3 0 1 1-6 0 3 3 0 0 1 6 0m-9 8c0 1 1 1 1 1h10s1 0 1-1-1-4-6-4-6 3-6 4m13.5-8.09c1.387-1.425 4.855 1.07 0 4.277-4.854-3.207-1.387-5.702 0-4.276Z"/>
                   </svg>
                 </div>
-            <h3 class="fs-2 text-body-emphasis">Core</h3>
+            <h3 class="fs-2">Core</h3>
                 <ul>
                     <li>Problem Solving</li>
                     <li>Creativity</li>
@@ -268,50 +268,50 @@
   
       <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
         <div class="col d-flex flex-column align-items-start gap-2">
-          <h3 class="fw-bold text-body-emphasis">Why stop learning?</h3>
+          <h3 class="fw-bold">Why stop learning?</h3>
           <p class="text-body-secondary">I believe one can always learn new things at any point in their life. There is no end to knowledge. The increasingly digital days also make it easier for us to pick up the skills that we want.</p>
         </div>
   
         <div class="col shadow-lg px-4 py-5">
           <div class="row row-cols-1 row-cols-sm-2 g-4">
-            <div class="col d-flex flex-column gap-2">
+            <div class="course col d-flex flex-column gap-2">
               <div class="feature-icon align-items-center justify-content-center fs-4 rounded-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-filetype-py" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2H7v-1h5a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5zM0 11.85h1.6q.434 0 .732.179.302.175.46.477t.158.677-.16.677q-.158.299-.464.474a1.45 1.45 0 0 1-.732.173H.79v1.342H0zm2.06 1.714a.8.8 0 0 0 .085-.381q0-.34-.185-.521-.185-.182-.513-.182H.788v1.406h.66a.8.8 0 0 0 .374-.082.57.57 0 0 0 .238-.24m2.963.75v1.535H4.23v-1.52L2.89 11.85h.876l.853 1.696h.032l.856-1.696h.855z"/>
                 </svg>
               </div>
-              <h5 class="fw-semibold mb-0 text-body-emphasis">Python for Machine Learning and Data Science Masterclass</h5>
+              <h5 class="fw-semibold mb-0">Python for Machine Learning and Data Science Masterclass</h5>
               <p class="text-body-secondary">Jose Portilla, Udemy</p>
             </div>
   
-            <div class="col d-flex flex-column gap-2">
+            <div class="course col d-flex flex-column gap-2">
               <div class="feature-icon align-items-center justify-content-center fs-4 rounded-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-robot" viewBox="0 0 16 16">
                   <path d="M6 12.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5M3 8.062C3 6.76 4.235 5.765 5.53 5.886a26.6 26.6 0 0 0 4.94 0C11.765 5.765 13 6.76 13 8.062v1.157a.93.93 0 0 1-.765.935c-.845.147-2.34.346-4.235.346s-3.39-.2-4.235-.346A.93.93 0 0 1 3 9.219zm4.542-.827a.25.25 0 0 0-.217.068l-.92.9a25 25 0 0 1-1.871-.183.25.25 0 0 0-.068.495c.55.076 1.232.149 2.02.193a.25.25 0 0 0 .189-.071l.754-.736.847 1.71a.25.25 0 0 0 .404.062l.932-.97a25 25 0 0 0 1.922-.188.25.25 0 0 0-.068-.495c-.538.074-1.207.145-1.98.189a.25.25 0 0 0-.166.076l-.754.785-.842-1.7a.25.25 0 0 0-.182-.135"/>
                   <path d="M8.5 1.866a1 1 0 1 0-1 0V3h-2A4.5 4.5 0 0 0 1 7.5V8a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1v1a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2v-1a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1v-.5A4.5 4.5 0 0 0 10.5 3h-2zM14 7.5V13a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V7.5A3.5 3.5 0 0 1 5.5 4h5A3.5 3.5 0 0 1 14 7.5"/>
                 </svg>
               </div>
-              <h5 class="fw-semibold mb-0 text-body-emphasis">Neural Networks and Deep Learning</h5>
+              <h5 class="fw-semibold mb-0">Neural Networks and Deep Learning</h5>
               <p class="text-body-secondary">Andrew Ng, Coursera</p>
             </div>
   
-            <div class="col d-flex flex-column gap-2">
+            <div class="course col d-flex flex-column gap-2">
               <div class="feature-icon align-items-center justify-content-center fs-4 rounded-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-browser-chrome" viewBox="0 0 16 16">
                   <path fill-rule="evenodd" d="M16 8a8 8 0 0 1-7.022 7.94l1.902-7.098a3 3 0 0 0 .05-1.492A3 3 0 0 0 10.237 6h5.511A8 8 0 0 1 16 8M0 8a8 8 0 0 0 7.927 8l1.426-5.321a3 3 0 0 1-.723.255 3 3 0 0 1-1.743-.147 3 3 0 0 1-1.043-.7L.633 4.876A8 8 0 0 0 0 8m5.004-.167L1.108 3.936A8.003 8.003 0 0 1 15.418 5H8.066a3 3 0 0 0-1.252.243 2.99 2.99 0 0 0-1.81 2.59M8 10a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
                 </svg>
               </div>
-              <h5 class="fw-semibold mb-0 text-body-emphasis">Web Development Bootcamp</h5>
+              <h5 class="fw-semibold mb-0">Web Development Bootcamp</h5>
               <p class="text-body-secondary">Dr. Angela, Udemy</p>
             </div>
   
-            <div class="col d-flex flex-column gap-2">
+            <div class="course col d-flex flex-column gap-2">
               <div class="feature-icon align-items-center justify-content-center fs-4 rounded-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-boxes" viewBox="0 0 16 16">
                   <path d="M7.752.066a.5.5 0 0 1 .496 0l3.75 2.143a.5.5 0 0 1 .252.434v3.995l3.498 2A.5.5 0 0 1 16 9.07v4.286a.5.5 0 0 1-.252.434l-3.75 2.143a.5.5 0 0 1-.496 0l-3.502-2-3.502 2.001a.5.5 0 0 1-.496 0l-3.75-2.143A.5.5 0 0 1 0 13.357V9.071a.5.5 0 0 1 .252-.434L3.75 6.638V2.643a.5.5 0 0 1 .252-.434zM4.25 7.504 1.508 9.071l2.742 1.567 2.742-1.567zM7.5 9.933l-2.75 1.571v3.134l2.75-1.571zm1 3.134 2.75 1.571v-3.134L8.5 9.933zm.508-3.996 2.742 1.567 2.742-1.567-2.742-1.567zm2.242-2.433V3.504L8.5 5.076V8.21zM7.5 8.21V5.076L4.75 3.504v3.134zM5.258 2.643 8 4.21l2.742-1.567L8 1.076zM15 9.933l-2.75 1.571v3.134L15 13.067zM3.75 14.638v-3.134L1 9.933v3.134z"/>
                 </svg>
               </div>
-              <h5 class="fw-semibold mb-0 text-body-emphasis">Object Oriented Programming in Java</h5>
+              <h5 class="fw-semibold mb-0">Object Oriented Programming in Java</h5>
               <p class="text-body-secondary">Duke University, Coursera</p>
             </div>
           </div>
