--- a/home.html
+++ b/home.html
@@ -269,7 +269,7 @@
       <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
         <div class="col d-flex flex-column align-items-start gap-2">
           <h3 class="fw-bold">Why stop learning?</h3>
-          <p class="text-body-secondary">I believe one can always learn new things at any point in their life. There is no end to knowledge. The increasingly digital days also make it easier for us to pick up the skills that we want.</p>
+          <p class="text-body-secondary">There is no end to knowledge, and in the increasingly digital days we can learn literally anything online. So why not?</p>
         </div>
   
         <div class="col shadow-lg px-4 py-5">
