--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
     <!--Education--> 
     <div class="container-fluid px-5 py-5" id="education">
         <!-- <h2 class="pb-2 border-bottom">EDUCATION</h2> -->
-        <div class="row g-4 pt-5 row-cols-sm-2 row-cols-lg-3 justify-content-center">
+        <div class="row g-4 pt-5 row-cols-sm-2 row-cols-lg-3 justify-content-center hidden">
             <div class="card mb-3 mx-lg-auto shadow-lg" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-mx-4">
@@ -97,34 +97,6 @@
                 </div>
             </div>
             </div>
-          
-            <!-- <div class="col d-flex align-items-start">
-            <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-backpack2" viewBox="0 0 16 16">
-                    <path d="M4.04 7.43a4 4 0 0 1 7.92 0 .5.5 0 1 1-.99.14 3 3 0 0 0-5.94 0 .5.5 0 1 1-.99-.14"/>
-                    <path fill-rule="evenodd" d="M4 9.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5zm1 .5v3h6v-3h-1v.5a.5.5 0 0 1-1 0V10z"/>
-                    <path d="M6 2.341V2a2 2 0 1 1 4 0v.341c2.33.824 4 3.047 4 5.659v1.191l1.17.585a1.5 1.5 0 0 1 .83 1.342V13.5a1.5 1.5 0 0 1-1.5 1.5h-1c-.456.607-1.182 1-2 1h-7a2.5 2.5 0 0 1-2-1h-1A1.5 1.5 0 0 1 0 13.5v-2.382a1.5 1.5 0 0 1 .83-1.342L2 9.191V8a6 6 0 0 1 4-5.659M7 2v.083a6 6 0 0 1 2 0V2a1 1 0 0 0-2 0M3 13.5A1.5 1.5 0 0 0 4.5 15h7a1.5 1.5 0 0 0 1.5-1.5V8A5 5 0 0 0 3 8zm-1-3.19-.724.362a.5.5 0 0 0-.276.447V13.5a.5.5 0 0 0 .5.5H2zm12 0V14h.5a.5.5 0 0 0 .5-.5v-2.382a.5.5 0 0 0-.276-.447L14 10.309Z"/>
-                  </svg>
-                </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">B. Tech</h3>
-              <p>Chemical Engineering</p>
-              <p>Jadavpur Univeristy, Kolkata, West Bengal</p>
-            </div>
-          </div>
-          <div class="col d-flex align-items-start">
-            <div class="icon-square text-body-emphasis d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-backpack2-fill" viewBox="0 0 16 16">
-                    <path d="M5 13h6v-3h-1v.5a.5.5 0 0 1-1 0V10H5z"/>
-                    <path d="M6 2v.341C3.67 3.165 2 5.388 2 8v1.191l-1.17.585A1.5 1.5 0 0 0 0 11.118V13.5A1.5 1.5 0 0 0 1.5 15h1c.456.607 1.182 1 2 1h7c.818 0 1.544-.393 2-1h1a1.5 1.5 0 0 0 1.5-1.5v-2.382a1.5 1.5 0 0 0-.83-1.342L14 9.191V8a6 6 0 0 0-4-5.659V2a2 2 0 1 0-4 0m2-1a1 1 0 0 1 1 1v.083a6 6 0 0 0-2 0V2a1 1 0 0 1 1-1m0 3a4 4 0 0 1 3.96 3.43.5.5 0 1 1-.99.14 3 3 0 0 0-5.94 0 .5.5 0 1 1-.99-.14A4 4 0 0 1 8 4M4.5 9h7a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-.5.5h-7a.5.5 0 0 1-.5-.5v-4a.5.5 0 0 1 .5-.5"/>
-                  </svg>
-                </div>
-            <div>
-              <h3 class="fs-2 text-body-emphasis">M. Tech</h3>
-              <p>Chemical Engineering</p>
-              <p>Indian Institute of Technology, Kharagpur, West Bengal</p>
-            </div>
-          </div> -->
         </div>
     </div>
 
@@ -133,7 +105,7 @@
     <!--SKILLS-->
     <div class="container-fluid px-5 py-5" id="skills">
         <!-- <h2 class="pb-2 border-bottom">SKILLS</h2> -->
-        <div class="skills row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center">
+        <div class="skills row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center hidden">
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
@@ -184,7 +156,7 @@
     <!--WorkExperience-->
     <div class="container-fluid px-5 py-5" id="workex">
         <!-- <h2 class="pb-2 border-bottom">EXPERIENCE</h2>  -->
-        <div class="row d-flex py-5 row-cols-sm-2 row-cols-lg-3 justify-content-start shadow-lg rounded-3">
+        <div class="row d-flex py-5 row-cols-sm-2 row-cols-lg-3 justify-content-start shadow-lg rounded-3 hidden">
         <div id="sar-emobility" class="col d-flex align-items-start justify-content-start ">
             <div class="icon-square text-body-emphasis d-inline-flex align-items-center fs-4 flex-shrink-0 me-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-buildings-fill" viewBox="0 0 16 16">
@@ -266,7 +238,7 @@
     <div class="container-fluid px-5 py-5" id="certificate">
       <!-- <h2 class="pb-2 border-bottom">CERTIFICATIONS</h2> -->
   
-      <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
+      <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5 hidden">
         <div class="col d-flex flex-column align-items-start gap-2">
           <h3 class="fw-bold">Why stop learning?</h3>
           <p class="text-body-secondary">There is no end to knowledge, and in the increasingly digital days we can learn literally anything online. So why not?</p>
@@ -324,7 +296,7 @@
     <div class="container-fluid px-5 py-5" id="interests">
         <!-- <h2 class="pb-2 border-bottom">INTERESTS</h2> -->
     
-        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+        <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5 hidden">
           <div class="col">
             <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-image: url('./football.jpg'); opacity: 0.9;">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
