--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-    <div class="top">
+    <div class="top hidden">
     <nav id="navbar-example2" class="navbar justify-content-center animate__animated animate__fadeInDown">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
     <ul class="nav nav-pills">
