--- a/home.html
+++ b/home.html
@@ -164,7 +164,7 @@
                   </svg>
             </div>
             <div>
-              <h3 class="fs-2 text-body-emphasis">SAR E-Mobility</h3>
+              <h3 class="fs-2 text-body-emphasis">Lime.ai</h3>
               <ul style="list-style: none;">
                 <li><h5>Senior Engineer (June 2023)</h5></li>
                 <li><b>Electric Vehicles | Data Infrastructure and Analytics</b></li>
