--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-    <div class="top hidden">
+    <div class="top">
     <nav id="navbar-example2" class="navbar justify-content-center animate__animated animate__fadeInDown">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
     <ul class="nav nav-pills">
@@ -51,10 +51,10 @@
     <!--Overview-->
     <div  id = "overview" class="container-fluid">
         <div class="row flex-lg-row-reverse align-items-center py-5 px-5">
-          <div class="col-10 col-sm-8 col-lg-6 animate__animated animate__fadeInRight">
+          <div class="col-10 col-sm-8 col-lg-6 hidden-right">
             <img id="profile-pic" src="./profile-pic2.jpg" class="d-block mx-lg-auto img-fluid shadow-sm my-5 shadow-lg" alt="profile pic" width="300" loading="lazy">
           </div>
-          <div class="intro col-lg-6 animate__animated animate__fadeInLeft">
+          <div class="intro col-lg-6 hidden">
             <h1 class="display-5 fw-bold lh-1 mb-3">Hi, I'm Subhankar Bhattacharjee.</h1>
             <h5>Your not-so-average chemical engineer who is adept with cutting-edge technology in the field of electric-Vehicle charging and who also uses his programming skills to build artifical neural networks and design websites (such as this)</h5>
           </div>
@@ -105,7 +105,7 @@
     <!--SKILLS-->
     <div class="container-fluid px-5 py-5" id="skills">
         <!-- <h2 class="pb-2 border-bottom">SKILLS</h2> -->
-        <div class="skills row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center hidden">
+        <div class="skills row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center hidden-right">
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
@@ -238,7 +238,7 @@
     <div class="container-fluid px-5 py-5" id="certificate">
       <!-- <h2 class="pb-2 border-bottom">CERTIFICATIONS</h2> -->
   
-      <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5 hidden">
+      <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5 hidden-right">
         <div class="col d-flex flex-column align-items-start gap-2">
           <h3 class="fw-bold">Why stop learning?</h3>
           <p class="text-body-secondary">There is no end to knowledge, and in the increasingly digital days we can learn literally anything online. So why not?</p>
