--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
     <!--Overview-->
     <div  id = "overview" class="container-fluid">
         <div class="row flex-lg-row-reverse align-items-center py-5 px-5">
-          <div class="col-10 col-sm-8 col-lg-6 hidden-right">
+          <div class="col-10 col-sm-8 col-lg-6 hidden">
             <img id="profile-pic" src="./profile-pic2.jpg" class="d-block mx-lg-auto img-fluid shadow-sm my-5 shadow-lg" alt="profile pic" width="300" loading="lazy">
           </div>
           <div class="intro col-lg-6 hidden">
@@ -105,7 +105,7 @@
     <!--SKILLS-->
     <div class="container-fluid px-5 py-5" id="skills">
         <!-- <h2 class="pb-2 border-bottom">SKILLS</h2> -->
-        <div class="skills row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center hidden-right">
+        <div class="skills row g-4 py-5 row-cols-2 row-cols-lg-3 justify-content-center hidden">
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-code-slash" viewBox="0 0 16 16">
@@ -238,7 +238,7 @@
     <div class="container-fluid px-5 py-5" id="certificate">
       <!-- <h2 class="pb-2 border-bottom">CERTIFICATIONS</h2> -->
   
-      <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5 hidden-right">
+      <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5 hidden">
         <div class="col d-flex flex-column align-items-start gap-2">
           <h3 class="fw-bold">Why stop learning?</h3>
           <p class="text-body-secondary">There is no end to knowledge, and in the increasingly digital days we can learn literally anything online. So why not?</p>
