--- a/home.html
+++ b/home.html
@@ -246,6 +246,7 @@
   
         <div class="col shadow-lg px-4 py-5">
           <div class="row row-cols-1 row-cols-sm-2 g-4">
+            <a href="https://www.ude.my/UC-fb6b04db-28fb-401d-ba92-dab83159af40" style="text-decoration: none; color: black;">
             <div class="course col d-flex flex-column gap-2">
               <div class="feature-icon align-items-center justify-content-center fs-4 rounded-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-filetype-py" viewBox="0 0 16 16">
@@ -254,9 +255,10 @@
               </div>
               <h5 class="fw-semibold mb-0">Python for Machine Learning and Data Science Masterclass</h5>
               <p class="text-body-secondary">Jose Portilla, Udemy</p>
-            </div>
+            </div></a>
   
-            <div class="course col d-flex flex-column gap-2">
+            <a href="https://www.coursera.org/account/accomplishments/certificate/MHE93UQKBLQH?trk=public_profile_see-credential" style="text-decoration:none; color: black;">
+              <div class="course col d-flex flex-column gap-2">
               <div class="feature-icon align-items-center justify-content-center fs-4 rounded-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-robot" viewBox="0 0 16 16">
                   <path d="M6 12.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5M3 8.062C3 6.76 4.235 5.765 5.53 5.886a26.6 26.6 0 0 0 4.94 0C11.765 5.765 13 6.76 13 8.062v1.157a.93.93 0 0 1-.765.935c-.845.147-2.34.346-4.235.346s-3.39-.2-4.235-.346A.93.93 0 0 1 3 9.219zm4.542-.827a.25.25 0 0 0-.217.068l-.92.9a25 25 0 0 1-1.871-.183.25.25 0 0 0-.068.495c.55.076 1.232.149 2.02.193a.25.25 0 0 0 .189-.071l.754-.736.847 1.71a.25.25 0 0 0 .404.062l.932-.97a25 25 0 0 0 1.922-.188.25.25 0 0 0-.068-.495c-.538.074-1.207.145-1.98.189a.25.25 0 0 0-.166.076l-.754.785-.842-1.7a.25.25 0 0 0-.182-.135"/>
@@ -265,7 +267,7 @@
               </div>
               <h5 class="fw-semibold mb-0">Neural Networks and Deep Learning</h5>
               <p class="text-body-secondary">Andrew Ng, Coursera</p>
-            </div>
+            </div></a>
   
             <div class="course col d-flex flex-column gap-2">
               <div class="feature-icon align-items-center justify-content-center fs-4 rounded-3">
@@ -277,7 +279,8 @@
               <p class="text-body-secondary">Dr. Angela, Udemy</p>
             </div>
   
-            <div class="course col d-flex flex-column gap-2">
+            <a href="https://www.coursera.org/account/accomplishments/specialization/certificate/UHQ2H7GJJX83?trk=public_profile_see-credential" style="text-decoration:none; color: black;">
+              <div class="course col d-flex flex-column gap-2">
               <div class="feature-icon align-items-center justify-content-center fs-4 rounded-3">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-boxes" viewBox="0 0 16 16">
                   <path d="M7.752.066a.5.5 0 0 1 .496 0l3.75 2.143a.5.5 0 0 1 .252.434v3.995l3.498 2A.5.5 0 0 1 16 9.07v4.286a.5.5 0 0 1-.252.434l-3.75 2.143a.5.5 0 0 1-.496 0l-3.502-2-3.502 2.001a.5.5 0 0 1-.496 0l-3.75-2.143A.5.5 0 0 1 0 13.357V9.071a.5.5 0 0 1 .252-.434L3.75 6.638V2.643a.5.5 0 0 1 .252-.434zM4.25 7.504 1.508 9.071l2.742 1.567 2.742-1.567zM7.5 9.933l-2.75 1.571v3.134l2.75-1.571zm1 3.134 2.75 1.571v-3.134L8.5 9.933zm.508-3.996 2.742 1.567 2.742-1.567-2.742-1.567zm2.242-2.433V3.504L8.5 5.076V8.21zM7.5 8.21V5.076L4.75 3.504v3.134zM5.258 2.643 8 4.21l2.742-1.567L8 1.076zM15 9.933l-2.75 1.571v3.134L15 13.067zM3.75 14.638v-3.134L1 9.933v3.134z"/>
@@ -285,7 +288,7 @@
               </div>
               <h5 class="fw-semibold mb-0">Object Oriented Programming in Java</h5>
               <p class="text-body-secondary">Duke University, Coursera</p>
-            </div>
+            </div></a>
           </div>
         </div>
       </div>
