--- a/home.html
+++ b/home.html
@@ -157,8 +157,8 @@
     <!--WorkExperience-->
     <div class="container-fluid px-5 py-5" id="workex">
         <!-- <h2 class="pb-2 border-bottom">EXPERIENCE</h2>  -->
-        <div class="row d-flex py-5 row-cols-sm-2 row-cols-lg-3 justify-content-start shadow-lg rounded-3 hidden">
-        <div id="sar-emobility" class="col d-flex align-items-start justify-content-start">
+        <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5 rounded-3 shadow-lg hidden">
+          <div class="col d-flex flex-column align-items-start gap-2 mt-0">
             <div class="icon-square text-body-emphasis d-inline-flex align-items-center fs-4 flex-shrink-0 me-3">
                 <svg xmlns="http://www.w3.org/2000/svg" height="30" fill="currentColor" class="bi bi-buildings-fill" viewBox="0 0 16 16">
                     <path d="M15 .5a.5.5 0 0 0-.724-.447l-8 4A.5.5 0 0 0 6 4.5v3.14L.342 9.526A.5.5 0 0 0 0 10v5.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V14h1v1.5a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5zM2 11h1v1H2zm2 0h1v1H4zm-1 2v1H2v-1zm1 0h1v1H4zm9-10v1h-1V3zM8 5h1v1H8zm1 2v1H8V7zM8 9h1v1H8zm2 0h1v1h-1zm-1 2v1H8v-1zm1 0h1v1h-1zm3-2v1h-1V9zm-1 2h1v1h-1zm-2-4h1v1h-1zm3 0v1h-1V7zm-2-2v1h-1V5zm1 0h1v1h-1z"/>
