--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main class="px-3 mt-auto">
     <h1 class="animate__animated animate__fadeIn">Welcome.</h1>
-    <p class="lead animate__animated animate__fadeInDown"><b>Why don't we get to know each other a little better? Go on. Enter my digital home.</b></p>
+    <p class="lead animate__animated animate__fadeInDown" style="color: #F5F5F5;"><b>Why don't we get to know each other a little better? Go on. Enter my digital home.</b></p>
     <p class="lead animate__animated animate__fadeInUp">
       <a href="./home.html" class="btn btn-lg border-white btn-light fw-bold">Enter</a>
     </p>
