--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">B.Tech</h5>
+                      <h5 class="card-title">Bachelor of Engineering</h5>
                       <p class="card-text">Chemical Engineering</p>
                       <p class="card-text">Jadavpur University, Kolkata</p>
                       <p class="card-text"><small class="text-body-secondary">2016-2020</small></p>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">M.Tech</h5>
+                    <h5 class="card-title">Master of Technology</h5>
                     <p class="card-text">Chemical Engineering</p>
                     <p class="card-text">Indian Institute of Technology, Kharagpur</p>
                     <p class="card-text"><small class="text-body-secondary">2021-2023</small></p>
